--- a/bear/index.html
+++ b/bear/index.html
@@ -24,7 +24,7 @@
   несостоятельным), — хищное млекопитающее семейства медвежьих, близкий родственник бурого медведя. Второй по величине
   сухопутный хищник планеты после гребнистого крокодила[2]. Назван так из-за белой шерсти.
 
-  <h2 id="1">Содержание</h2>
+  <h2>Содержание</h2>
   <a href="#1">1. Происхождение вида</a>
   <br>
   <a href="#2">2. Внешний вид</a>
